# ecto_kitchen

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  dev_submodule_stuff.sh  doitall.sh  get_cooking.rst
doc/: CMakeLists.txt  Makefile.in
doc/source/: README.rst  conf.py  dependencies.rst  index.rst
doc/source/kitchen/: examples.rst  git.rst  index.rst  vidcap.py
doc/source/kitchen/examples/: index.rst  kinect_from_ros.py  kinect_from_ros.rst  vidcap.py  vidcap.rst
test/: build_as_standalones.sh.in
util/: add_submodule_remotes.sh  check_python_script_hashbang.sh
